logs/dag_id=insert_date/run_id=manual__2025-01-10T152436.555961+0000/task_id=sql_md_exchange_rate_d/attempt=1.log
[2025-01-10T15:24:43.257+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: insert_date.sql_md_exchange_rate_d manual__2025-01-10T15:24:36.555961+00:00 [queued]>
[2025-01-10T15:24:43.269+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: insert_date.sql_md_exchange_rate_d manual__2025-01-10T15:24:36.555961+00:00 [queued]>
[2025-01-10T15:24:43.270+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 3
[2025-01-10T15:24:43.463+0000] {taskinstance.py:2191} INFO - Executing <Task(SQLExecuteQueryOperator): sql_md_exchange_rate_d> on 2025-01-10 15:24:36.555961+00:00
[2025-01-10T15:24:43.469+0000] {standard_task_runner.py:60} INFO - Started process 1795 to run task
[2025-01-10T15:24:43.473+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'insert_date', 'sql_md_exchange_rate_d', 'manual__2025-01-10T15:24:36.555961+00:00', '--job-id', '1664', '--raw', '--subdir', 'DAGS_FOLDER/insert_data.py', '--cfg-path', '/tmp/tmpt3g9_arv']
[2025-01-10T15:24:43.476+0000] {standard_task_runner.py:88} INFO - Job 1664: Subtask sql_md_exchange_rate_d
[2025-01-10T15:24:43.525+0000] {task_command.py:423} INFO - Running <TaskInstance: insert_date.sql_md_exchange_rate_d manual__2025-01-10T15:24:36.555961+00:00 [running]> on host 711845a6becd
[2025-01-10T15:24:43.612+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='budanovsa' AIRFLOW_CTX_DAG_ID='insert_date' AIRFLOW_CTX_TASK_ID='sql_md_exchange_rate_d' AIRFLOW_CTX_EXECUTION_DATE='2025-01-10T15:24:36.555961+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-01-10T15:24:36.555961+00:00'
[2025-01-10T15:24:43.613+0000] {sql.py:276} INFO - Executing: INSERT INTO ds.md_exchange_rate_d( 
     data_actual_date
    ,data_actual_end_date
    ,currency_rk
	,reduced_cource
	,code_iso_num
)
SELECT distinct
      to_date(merd."DATA_ACTUAL_DATE", '%Y-%m-%d') 
    , to_date(merd."DATA_ACTUAL_END_DATE", '%Y-%m-%d')
	, merd."CURRENCY_RK"
	, merd."REDUCED_COURCE"
	, merd."CODE_ISO_NUM"
  FROM stage.md_exchange_rate_d merd
 WHERE merd."DATA_ACTUAL_DATE" IS NOT NULL
   AND merd."CURRENCY_RK" IS NOT NULL
on conflict on constraint md_exchange_rate_d_pkey on update
	set data_actual_end_date=excluded.data_actual_end_date
		reduced_cource=excluded.reduced_cource
		code_iso_num=excluded.code_iso_num; 
[2025-01-10T15:24:43.622+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T15:24:43.631+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T15:24:43.705+0000] {sql.py:450} INFO - Running statement: INSERT INTO ds.md_exchange_rate_d( 
     data_actual_date
    ,data_actual_end_date
    ,currency_rk
	,reduced_cource
	,code_iso_num
)
SELECT distinct
      to_date(merd."DATA_ACTUAL_DATE", '%Y-%m-%d') 
    , to_date(merd."DATA_ACTUAL_END_DATE", '%Y-%m-%d')
	, merd."CURRENCY_RK"
	, merd."REDUCED_COURCE"
	, merd."CODE_ISO_NUM"
  FROM stage.md_exchange_rate_d merd
 WHERE merd."DATA_ACTUAL_DATE" IS NOT NULL
   AND merd."CURRENCY_RK" IS NOT NULL
on conflict on constraint md_exchange_rate_d_pkey on update
	set data_actual_end_date=excluded.data_actual_end_date
		reduced_cource=excluded.reduced_cource
		code_iso_num=excluded.code_iso_num; , parameters: None
[2025-01-10T15:24:43.709+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "on")
LINE 17: on conflict on constraint md_exchange_rate_d_pkey on update
                                                           ^

[2025-01-10T15:24:43.720+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=insert_date, task_id=sql_md_exchange_rate_d, execution_date=20250110T152436, start_date=20250110T152443, end_date=20250110T152443
[2025-01-10T15:24:43.734+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1664 for task sql_md_exchange_rate_d (ОШИБКА:  ошибка синтаксиса (примерное положение: "on")
LINE 17: on conflict on constraint md_exchange_rate_d_pkey on update
                                                           ^
; 1795)
[2025-01-10T15:24:43.765+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-01-10T15:24:43.830+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
